# openshift-virtualization-tests

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  OWNERS  Pipfile  README.md  bugzilla.cfg  conftest.py  containerized-data-collector-no-pods-logs.yaml  containerized-data-collector.yaml  data-collector-no-pods-logs.yaml  data-collector.yaml  install-resources-mr.py  jira.cfg  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: jira_validation.yml  pr_stats.yml
builder/: Dockerfile
containers/fedora/: README.md  build.sh
containers/internal_http/: Dockerfile  README.md  README.txt
containers/internal_http/certs/: tls.crt  tls.key
containers/utility/: Dockerfile
scripts/: requirements.txt  utils.py
scripts/bugzilla/: check_bug_status_closed.py
scripts/jira/: check_bug_status_closed.py  close_jira_on_merge.py
tests/: conftest.py  global_config.py  global_config_nfs.py  global_config_rh_it.py  global_config_sno.py  os_params.py  upgrade_params.py  utils.py
tests/after_cluster_deploy_sanity/: test_after_cluster_deploy_sanity.py
tests/chaos/: conftest.py  utils.py
tests/chaos/migration/: conftest.py  test_migration.py  utils.py
tests/chaos/snapshot/: conftest.py  test_snapshot.py
tests/chaos/standard/: conftest.py  test_standard.py
tests/chaos/utils/: krkn_process.py  utils.py
tests/compute/: OWNERS  conftest.py  utils.py
tests/compute/ssp/: conftest.py  constants.py  utils.py
tests/compute/upgrade/: conftest.py  test_upgrade_compute.py  utils.py
tests/compute/virt/: conftest.py  constants.py  utils.py
tests/infrastructure/instance_types/: conftest.py  constants.py  test_instance_type.py  test_vm_preference.py  test_vm_with_instance_and_pref.py  utils.py
tests/install_upgrade_operators/: conftest.py  constants.py  utils.py
tests/network/: conftest.py  constants.py  utils.py
tests/scale/: README.md  test_scale_benchmark.py
tests/storage/: OWNERS  conftest.py  constants.py  test_cdi_certificate.py  test_cdi_config.py  test_cdi_resources.py  test_data_import_cron.py  test_disk_preallocation.py  test_libguestfs.py  test_memory_dump.py  test_online_resize.py  test_priority_class.py  test_scratch_space.py  test_wffc.py  utils.py
utilities/: console.py  constants.py  data_collector.py  exceptions.py  hco.py  infra.py  network.py  operator.py  pytest_matrix_utils.py  pytest_utils.py  ssp.py  storage.py  virt.py
utilities/manifests/: utility-daemonset.yaml  utility-daemonset_upstream.yaml  vm-fedora.yaml
(+238 files in other folders)
