[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.ruff.lint.isort]
order-by-type = true
known-third-party = ["ocp_resources", "ocp_utilities", "pyhelper_utils"]

[tool.black]
line-length = 88

[tool.poetry]
name = "cnv-tests-4.12"
version = "4.12"
description = "cnv-tests"
authors = ["cnv-tests"]
packages = [{ include = "*" }]

[tool.poetry.dependencies]
python = "^3.8"
pexpect = "*"
PyYAML = "*"
pytest = "7.4.*"
bitmath = "*"
urllib3 = "*"
netaddr = "*"
bcrypt = "*"
pytest-marker-bugzilla = "*"
pytest-testconfig = "*"
pytest-benchmark = "*"
sh = "*"
pytest-order = "*"
jinja2 = "*"
requests = "*"
xmltodict = "*"
pytest-jira = {version = "0.3.24", python = ">=3.9"}
jira = "*"
python-rrmngmnt = "*"
importlib-metadata = "*"
importlib-resources = "*"
click = "*"
openshift-python-wrapper = "4.12.*"
openshift-python-utilities = "4.12.*"
openshift-python-wrapper-data-collector = "*"
docker = "*"
pyvmomi = "*"
pytest-dependency = "*"
pytest-progress = "*"
pytest-lazy-fixture = "*"
colorlog = "*"
dictdiffer = "*"
python-benedict = "*"
bs4 = "*"
shortuuid = "*"
podman = "*"
gitpython = "*"
deepdiff = "*"
python-utility-scripts = "*"
kubernetes = "^27.2.0"
poetry-plugin-export = "^1.7.1"

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
